No bake for emission when using Light Fallof #48216

Closed
opened 2016-04-20 18:01:32 +02:00 by Ivan Lebedev · 9 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.77a abf6f08, see splash screen)
Worked: (optional)

Short description of error
If you use Light Falloff in emission shaders then they won't bake.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Look at screenshot, I think they tell everything.

bake_no.png

bake_yes.png

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.77a abf6f08, see splash screen) Worked: (optional) **Short description of error** If you use Light Falloff in emission shaders then they won't bake. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Look at screenshot, I think they tell everything. ![bake_no.png](https://archive.blender.org/developer/F304544/bake_no.png) ![bake_yes.png](https://archive.blender.org/developer/F304545/bake_yes.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @IvanLebedev

Added subscriber: @IvanLebedev

Added subscriber: @Sergey

Added subscriber: @Sergey

Please always attach .blend file which demonstrates the issue, together with exact computer configuration (CPU, GPU, information whether you bake on CPU or GPU) and so on.

Please always attach .blend file which demonstrates the issue, together with exact computer configuration (CPU, GPU, information whether you bake on CPU or GPU) and so on.

This issue was referenced by 23a9fede69

This issue was referenced by 23a9fede6931c8afe2645f51ad6811751d141d3a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

This is quite ill defined in general, but I've now set the bake ray length to 1 so it gives reasonable results.

This is quite ill defined in general, but I've now set the bake ray length to 1 so it gives reasonable results.

This issue was referenced by blender/cycles@efccb9d28d

This issue was referenced by blender/cycles@efccb9d28d4267ca609d2581fd57bb89a38f2ae2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48216
No description provided.