Fix T48216: Cycles light fallof node gives black emission in baking.